# ff5

./: .gitignore  .gitmodules  Makefile  README.md
cfg/: ff5-en.cfg  ff5-jp.cfg
include/: const.inc  macros.inc
include/btlgfx/: attack_anim_frames.inc  attack_anim_script.inc  unknown_d99ef2.inc  unknown_d9a7b0.inc
include/field/: entrance_trigger.inc  event_cond.inc  event_script.inc  event_trigger.inc  npc_prop.inc  npc_script.inc  world_tilemap.inc
include/sound/: sample_brr.inc  song_script.inc  spc-dsp.inc  spc-macros.inc  spc-ram.inc
include/text/: ability_desc_jp.inc  battle_dlg_jp.inc  battle_msg_jp.inc  dlg_jp.inc  item_desc_jp.inc  job_desc_jp.inc  map_title_jp.inc  menu_text_jp.inc
notes/: ff5-sfc-rom-map.txt
port/: CMakeLists.txt  CMakePresets.json  vcpkg.json
port/src/: main.cpp
port/src/engine/: Engine.cpp  Engine.h
port/src/engine/assets/: AssetManager.h
port/src/engine/battle/: Battle.cpp  Battle.h
port/src/engine/cutscene/: Cutscene.cpp  Cutscene.h
port/src/engine/field/: Field.cpp  Field.h
port/src/engine/menu/: Menu.cpp  Menu.h
port/src/engine/sound/: BRRDecoder.cpp  BRRDecoder.h  SampleBank.cpp  SampleBank.h  Sequencer.cpp  Sequencer.h  Sound.cpp  Sound.h
port/src/platform/audio/: IAudioOutput.h
port/src/platform/audio/sdl2/: SDL2AudioOutput.cpp  SDL2AudioOutput.h
port/src/platform/gfx/: IRenderer.h
port/src/platform/gfx/sdl2/: SDL2Renderer.cpp  SDL2Renderer.h
port/src/platform/input/: IInput.h
port/src/platform/input/sdl2/: SDL2Input.cpp  SDL2Input.h
src/battle/: battle-main.asm
src/btlgfx/: btlgfx-main.asm
src/cutscene/: cutscene-main.asm
src/field/: field-main.asm
src/gfx/: gfx-main.asm
src/menu/: menu-main.asm
src/sound/: ff5-spc.asm  sfx-data.asm  song-data.asm  sound-main.asm
src/text/: ability_desc_en.json  battle_msg_en.json  dlg_jp.json  text-main.asm
tools/: clean_assets.py  encode_battle_bg_flip.py  encode_battle_bg_tiles.py  encode_cutscene.py  encode_song_samples.py  encode_text.py  encode_world_tilemap.py  extract_assets.py  ff5_compress.py  fix_checksum.py  rip_list_en.json  rip_list_jp.json  shuffle_rng.py  validatebin.py
tools/char_table/: big_symbols_jp.json  mte.json  small_symbols_jp.json
